# samples-opengl-sdl2

./: .gitignore  README.md
opengl-sdl2-basics/: CMakeLists.txt  README.md  build.bat  build.sh  main.c  opengl32.def
opengl-sdl2-glsl/: CMakeLists.txt  README.md  build.sh  def_shaders.h  def_shadersaaaa.h  main.c  mainaaaa.c
opengl-sdl2-glsl2/: fragment_shader.glsl  main.c  vertex_shader.glsl
